// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EAvatar > EAvatar snapshot 1`] = `
"<div class=\\"eu-avatar md\\" style=\\"background-color: #fff;\\">
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`EAvatar > should work with \`props\` 1`] = `
"<div class=\\"eu-avatar md\\" style=\\"background-color: #fff;\\">EAvatar
  <!---->
  <!---->
</div>"
`;

exports[`eAvatar > eAvatar snapshot 1`] = `
"<div class="eu-avatar md" style="background-color: #fff;">
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`eAvatar > should work with \`props\` 1`] = `
"<div class="eu-avatar md" style="background-color: #fff;">EAvatar
  <!---->
  <!---->
</div>"
`;
